add tsyringe and changes in swagger
